# hello_swig

./: README.md  setup.py
using_cmake/: CMakeLists.txt  phonebook.cpp  phonebook.h
using_distutils/: phonebook.i
